--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
 
   <body>
 
-    <div id='navbar'>
-      <h1>Alia Toth-Smith</h1>
-    </div>
 
     <div id='main'>
 
@@ -38,8 +35,11 @@
 
       <div id='work'>
 
-        <div class="">
-          <p>
+        <h1>Portfolio 2022</h1>
+
+        <div class="portfolio-item">
+
+          <p class='portfolio-desc'>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
 
             Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
@@ -50,6 +50,44 @@
 
             Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
           </p>
+
+
+          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
+
+        </div>
+
+        <div class="portfolio-item">
+
+          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
+
+          <p class='portfolio-desc'>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
+
+            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
+
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
+
+            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
+
+            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
+          </p>
+
+        </div>
+
+        <div class="portfolio-item">
+          <p class='portfolio-desc'>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
+
+            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
+
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
+
+            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
+
+            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
+          </p>
+
+          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
 
         </div>
 
@@ -71,21 +109,6 @@
               In my free time, I like to write fiction, sing, read DND books, and play with my dog, Charlotte.
             </p>
           </div>
-
-        </div>
-
-        <div class="">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
-
-            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
-
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
-
-            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
-
-            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
-          </p>
 
         </div>
 
