Update to Portfolio Work

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div id='main'>
 
       <div id='sidebar'>
+
+        <h1>Portfolio 2022</h1>
+
         <img src="img/main/profile.jpg" alt="Alia Toth-Smith. A female presenting, asian, young adult with shoulder length black hair. She is wearing a blue, pink, green, and white floral print skirt, a white button-up, and a bow tie.">
 
         <h3>Contact Info</h3>
@@ -35,24 +38,28 @@
 
       <div id='work'>
 
-        <h1>Portfolio 2022</h1>
-
         <div class="portfolio-item">
 
-          <p class='portfolio-desc'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
+          <div class='portfolio-desc'>
+            <h2>Extinction Party</h2>
 
-            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
+            <p>
+              A satirical take on animal extinction awareness, browse through to learn
+              how ten distinct animals went extinct.
+              <br><br>
+              Created in conjunction with a team with four other members, Alia was responsible
+              for all interactions on this website. She also contributed heavily to the CSS and
+              overall theme of the website. During group meetings, she lead discussion, delegated
+              work, and helped her teammates with their portions.
+              <br><br>
+              This website was made for ART 101 at UCSC taught by Wes Modes during Spring 2022.
+              <br><br>
+              <a href="https://atothsmi.github.io/art-101-g14/" target="_blank">Visit the Website</a>
+            </p>
+          </div>
 
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
 
-            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
-
-            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
-          </p>
-
-
-          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
+          <img class='portfolio-img' src="img/main/extinction-party.png" alt="A screenshot of a website. It reads 'Ready to join the party?' in a hot pink, striped font. Underneath is a hot pink button that reads 'yes' in all caps.">
 
         </div>
 
@@ -60,7 +67,7 @@
 
           <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
 
-          <p class='portfolio-desc'>
+          <div class='portfolio-desc'>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
 
             Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
@@ -69,23 +76,28 @@
 
             Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
 
-            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
-          </p>
+          </div>
 
         </div>
 
         <div class="portfolio-item">
-          <p class='portfolio-desc'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
+          <div class='portfolio-desc'>
+            <h2>Extinction Party</h2>
 
-            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
+            <p>
+              A satirical take on animal extinction awareness, browse through to learn
+              more on how ten distinct animals went extinct, each with a common denominator
+              (a.k.a human activity).
+              <br><br>
+              Created in conjunction with a team with four other members, Alia was responsible
+              for all interactions on this website. She also contributed heavily to the CSS and
+              overall theme of the website. During group meetings, she lead discussion, delegated
+              work, and helped her teammates with their portions.
+              <br><br>
+              This website was made for ART 101 at UCSC taught by Wes Modes.
+            </p>
 
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
-
-            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
-
-            Donec ac faucibus turpis, et consectetur massa. Nullam fermentum metus eu sem finibus, non convallis dui elementum. Duis mattis ligula in nibh gravida feugiat. Aenean congue suscipit turpis at tincidunt. Donec porttitor sollicitudin ligula id rutrum. Maecenas non urna at quam eleifend efficitur. Morbi iaculis, urna at lobortis ornare, augue ex maximus leo, nec tristique turpis turpis quis tortor. Sed ultrices, erat at placerat consequat, nisl lorem consequat neque, vulputate posuere lorem sapien faucibus velit. Sed semper urna mattis diam faucibus, rhoncus dapibus mauris accumsan. Suspendisse egestas arcu vel semper laoreet.
-          </p>
+          </div                                                                                                                                           >
 
           <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
 
@@ -98,7 +110,7 @@
           </div>
 
           <div id='bio-text'>
-            <h1>About Me</h1>
+            <h2>About Me</h2>
 
             <p>
               Hi! My name is Alia Toth-Smith.
