--- a/templates.html
+++ b/templates.html
@@ -1,9 +1,19 @@
 <!-- Portfolio Item Template -->
 <div class="portfolio-item">
 
-  <p class='portfolio-desc'>
+  <div class='portfolio-desc'>
+    <h2>Project Title</h2>
 
-  </p>
+    <p>
+      Summary of Project
+      <br><br>
+      Summary of Contributions
+      <br><br>
+      When/Where
+      <br><br>
+      <a href="#" target="_blank">Visit the Website</a>
+    </p>
+  </div>
   <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
 
 </div>
