--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
   <body>
 
 
-    <div id='main'>
+    <div class='main'>
 
-      <div id='sidebar'>
+      <div class='sidebar'>
 
         <h1>Portfolio 2022</h1>
 
+        <p class='center-text'>
+          <a href="index.html">Work</a>
+          <a href="bio.html">About</a>
+        </p>
+
         <img src="img/main/profile.jpg" alt="Alia Toth-Smith. A female presenting, asian, young adult with shoulder length black hair. She is wearing a blue, pink, green, and white floral print skirt, a white button-up, and a bow tie.">
 
-        <h3>Contact Info</h3>
-        <p>infern002@aol.com</p>
+        <h3 class='center-text'>Contact Info</h3>
+        <p class='center-text' >infern002@aol.com</p>
 
       </div>
 
@@ -65,18 +70,14 @@
 
         <div class="portfolio-item">
 
+          <div class='portfolio-desc'>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa
+            volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
+          </div>
+
           <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
 
-          <div class='portfolio-desc'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
 
-            Sed eu libero placerat, aliquam nisl eget, consectetur orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi lorem diam, porttitor quis lacinia tempor, mattis efficitur sapien. In ornare et metus non finibus. Quisque aliquet mauris vestibulum leo venenatis, ut convallis lorem mattis. Nunc mollis libero odio, dignissim tempus orci porttitor luctus. Praesent dapibus tincidunt mauris non semper. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus ut consequat neque. In hac habitasse platea dictumst. Proin ultricies lorem consectetur, vehicula massa sit amet, porttitor orci. Aenean accumsan nisi id blandit condimentum. Maecenas commodo convallis ligula, vel mollis nulla. Fusce tristique vitae mi in finibus. Nunc eu accumsan ante. Vestibulum cursus viverra metus, eget dapibus dolor sagittis in.
-
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec sed arcu et augue malesuada egestas. Nunc quam dui, facilisis quis nibh in, posuere vestibulum mi. Cras blandit, lorem a dignissim sagittis, tellus ligula placerat orci, et sollicitudin eros mi ut enim. Cras bibendum, enim id malesuada faucibus, sem tortor sagittis odio, et tincidunt dolor metus ut lorem. Integer gravida aliquam congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. In euismod dapibus ullamcorper. Praesent risus velit, porta non metus nec, ullamcorper fermentum nibh. Maecenas neque arcu, dignissim pellentesque leo vitae, malesuada dapibus lectus.
-
-            Sed nec elementum lectus. Etiam mollis ut nisl in faucibus. Ut tincidunt sit amet ante eu placerat. Proin turpis ligula, faucibus at ornare id, consequat non nunc. Nulla sit amet ligula commodo, accumsan augue vel, iaculis velit. Sed non metus mollis, accumsan velit sed, convallis augue. Aliquam varius at ex in efficitur. Nam sit amet pretium massa. Pellentesque tincidunt nunc in justo venenatis laoreet. Ut quis felis auctor, malesuada tellus id, commodo nibh.
-
-          </div>
 
         </div>
 
@@ -103,26 +104,6 @@
 
         </div>
 
-        <div id='biography'>
-
-          <div id='bio-img'>
-            <img src="img/main/elf-alia.JPG" alt="A picture of Alia Toth-Smith. She is a young adult, asian, and female presenting. She is wearing a sea-green wig, prosthetic elf ears, long fake eyelashes, and black lipstick.">
-          </div>
-
-          <div id='bio-text'>
-            <h2>About Me</h2>
-
-            <p>
-              Hi! My name is Alia Toth-Smith.
-              I am a writer and programmer.
-
-              I'm currently pursuing a Bachelors of Arts in Art & Design: Games & Playable Media (AGPM).
-              I grew up in the Bay Area.
-              In my free time, I like to write fiction, sing, read DND books, and play with my dog, Charlotte.
-            </p>
-          </div>
-
-        </div>
 
       </div>
 
