--- a/index.html
+++ b/index.html
@@ -22,40 +22,47 @@
 
   <body>
 
+    <div id='top-bar'>
+      <h1 id='title'>Alia Toth-Smith</h1>
+
+      <div id='header'>
+
+        <p class='contact-text'>
+          <a href="index.html">Projects</a>
+        </p>
+
+        <p class='contact-text'>
+          <a href="mailto:atothsmi@ucsc.edu">atothsmi@ucsc.edu</a>
+        </p>
+
+        <p class='contact-text'>
+          <a href="pages/bio.html">About</a>
+        </p>
+
+      </div>
+    </div>
+
 
     <div class='main'>
 
-      <div class='sidebar'>
-
-        <h1>Portfolio 2022</h1>
-
-        <p class='center-text'>
-          <a href="index.html">Work</a>
-          <a href="bio.html">About</a>
-        </p>
-
-        <img src="img/main/profile.jpg" alt="Alia Toth-Smith. A female presenting, asian, young adult with shoulder length black hair. She is wearing a blue, pink, green, and white floral print skirt, a white button-up, and a bow tie.">
-
-        <h3 class='center-text'>Contact Info</h3>
-        <p class='center-text' >infern002@aol.com</p>
-
-      </div>
-
       <div id='work'>
 
+        <h1 class='portfolio-heading'>Projects</h1>
+
+        <h2 class="portfolio-heading">Extinction Party</h2>
         <div class="portfolio-item">
 
           <div class='portfolio-desc'>
-            <h2>Extinction Party</h2>
 
-            <p>
+
+            <p class='portfolio-text'>
               A satirical take on animal extinction awareness, browse through to learn
               how ten distinct animals went extinct.
               <br><br>
-              Created in conjunction with a team with four other members, Alia was responsible
-              for all interactions on this website. She also contributed heavily to the CSS and
-              overall theme of the website. During group meetings, she lead discussion, delegated
-              work, and helped her teammates with their portions.
+              Created in conjunction with four other team members, I was responsible
+              for all interactions on this website. I also contributed heavily to the CSS and
+              overall theme of the website. During group meetings, I lead discussion, delegated
+              work, and helped her teammates complete their portions.
               <br><br>
               This website was made for ART 101 at UCSC taught by Wes Modes during Spring 2022.
               <br><br>
@@ -68,42 +75,70 @@
 
         </div>
 
+        <h2 class='portfolio-heading'>The Last Heart</h2>
         <div class="portfolio-item">
 
           <div class='portfolio-desc'>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sit amet augue finibus, accumsan velit sed, mattis felis. Praesent vel scelerisque est, vitae dictum enim. Sed sit amet lacus imperdiet massa
-            volutpat faucibus. Mauris suscipit congue nibh vel tincidunt. Praesent ultrices iaculis consectetur. Cras imperdiet dolor libero, quis accumsan nibh blandit a. Nullam ac nulla sed metus venenatis aliquam quis vel eros. Ut a sagittis libero. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Proin tempor est in neque bibendum iaculis. Sed non sapien leo. Aenean blandit turpis quam, eu condimentum nunc vestibulum ut. Aenean tincidunt in metus ut elementum. Duis pretium ut nulla consectetur scelerisque. Proin nec ligula a elit condimentum aliquet ut non neque.
-          </div>
 
-          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
-
-
-
-        </div>
-
-        <div class="portfolio-item">
-          <div class='portfolio-desc'>
-            <h2>Extinction Party</h2>
-
-            <p>
-              A satirical take on animal extinction awareness, browse through to learn
-              more on how ten distinct animals went extinct, each with a common denominator
-              (a.k.a human activity).
+            <p class='portfolio-text'>
+              In Nequam Mountain, the undead seeks to rise again. Warriors from the past have left items to aid you quest,
+              but every boon has its cost. Will you be able to defeat the enemy within and save your people?
               <br><br>
-              Created in conjunction with a team with four other members, Alia was responsible
-              for all interactions on this website. She also contributed heavily to the CSS and
-              overall theme of the website. During group meetings, she lead discussion, delegated
-              work, and helped her teammates with their portions.
+              For this project, we wanted to create an extremely unforgiving hack-and-slash RPG.
+              I was responsible for coordinating all group members by creating a development plan,
+              running meetings, and keeping track of tasks to complete.
+              I also contributed to level design, programming, story, and other assorted art.
               <br><br>
-              This website was made for ART 101 at UCSC taught by Wes Modes.
+              This game was made using the free version of Construct3 for CMPM 80k at UCSC taught by Tad Leckman and Noah Wardrip-Fruin
+              during Winter 2022.
             </p>
 
-          </div                                                                                                                                           >
+          </div>
 
-          <img class='portfolio-img' src="img/main/elf-alia.JPG" alt="temp img">
+          <video class='portfolio-video' controls>
+            <source src="video/The_Last_Heart.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
 
         </div>
 
+        <h2 class='portfolio-heading'>The World Moves On</h2>
+        <div class="portfolio-item">
+
+          <div class='portfolio-desc'>
+            <p class='portfolio-text'>
+              What do you do after something unbearable happens to someone you love?
+              How can you help if they're stuck in the past?
+              <br><br>
+              In this interactive narrative, I wanted to look at loss and depression from an outside perspective.
+              I worked in monotone to set the tone and used text placement and font to differentiate
+              between each voice.
+              <br><br>
+              This project was made using an engine created by Adam Smith for CMPM 35 at UCSC in Fall 2021.
+              <br><br>
+              <a href="https://the-world-moves-on.glitch.me/" target="_blank">Visit the Website</a>
+            </p>
+
+          </div>
+
+        </div>
+
+        <h2 class='portfolio-heading'>The Unfortunate Tail of Fancy the Cat</h2>
+        <div class="portfolio-item">
+          <div class='portfolio-desc'>
+            <p class='portfolio-text'>
+              A story about a cat that always ends horribly.
+              <br><br>
+              In this branching narrative, I played with a contrast between a silly visual aesthetic and a
+              sad and dark topic. I wanted to explore surface level success and an unhealthy obsession with
+              work, both of which are topics that I'm very familiar with.
+              <br><br>
+              This project was made using an engine created by Adam Smith for CMPM 35 at UCSC in Fall 2021.
+              <br><br>
+              <a href="https://the-unfortunate-tail-of-fancy-the-cat.glitch.me/" target="_blank">Visit the Website</a>
+            </p>
+          </div>
+        </div>
 
       </div>
 
