Content and Style Revisions 3

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <title>Alia Toth-Smith</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/small-screen.css">
-    <link rel="stylesheet" href="css/wide-screen.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wide-screen.css">
+    <link rel="stylesheet" href="css/small-screen.css">
+
+
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -49,22 +51,23 @@
 
         <h1 class='portfolio-heading'>Projects</h1>
 
-        <h2 class="portfolio-heading">Extinction Party</h2>
+        <h2 class="portfolio-heading">Extinction Party (Spring 2022)</h2>
+
         <div class="portfolio-item">
 
           <div class='portfolio-desc'>
 
 
             <p class='portfolio-text'>
-              A satirical take on animal extinction awareness, browse through to learn
-              how ten distinct animals went extinct.
+              <i>A satirical take on animal extinction awareness.<br> Browse through to learn
+              how ten distinct animals went extinct.</i>
               <br><br>
-              Created in conjunction with four other team members, I was responsible
-              for all interactions on this website. I also contributed heavily to the CSS and
-              overall theme of the website. During group meetings, I lead discussion, delegated
+              Created in conjunction with four other team members, she was responsible
+              for all interactions on this website. She also contributed heavily to the CSS and
+              overall theme of the website. During group meetings, she led discussion, delegated
               work, and helped her teammates complete their portions.
               <br><br>
-              This website was made for ART 101 at UCSC taught by Wes Modes during Spring 2022.
+              Made for ART 101 at UCSC taught by Wes Modes.
               <br><br>
               <a href="https://atothsmi.github.io/art-101-g14/" target="_blank">Visit the Website</a>
             </p>
@@ -75,22 +78,25 @@
 
         </div>
 
-        <h2 class='portfolio-heading'>The Last Heart</h2>
+        <h2 class='portfolio-heading'>The Last Heart (Winter 2022)</h2>
         <div class="portfolio-item">
 
           <div class='portfolio-desc'>
 
             <p class='portfolio-text'>
-              In Nequam Mountain, the undead seeks to rise again. Warriors from the past have left items to aid you quest,
-              but every boon has its cost. Will you be able to defeat the enemy within and save your people?
+              <i>In Nequam Mountain the undead seeks to rise again. Warriors from the past have left items to aid you quest,
+              but every boon has its cost. Will you be able to defeat the enemy within and save your people?</i>
               <br><br>
-              For this project, we wanted to create an extremely unforgiving hack-and-slash RPG.
-              I was responsible for coordinating all group members by creating a development plan,
+              For this project, the team wanted to create an extremely unforgiving hack-and-slash RPG.
+              She was responsible for coordinating all group members by creating a development plan,
               running meetings, and keeping track of tasks to complete.
-              I also contributed to level design, programming, story, and other assorted art.
+              She also contributed to level design, programming, story, and other assorted art.
               <br><br>
-              This game was made using the free version of Construct3 for CMPM 80k at UCSC taught by Tad Leckman and Noah Wardrip-Fruin
-              during Winter 2022.
+              Other Credits:
+              <br>
+              Engine: Construct3, free version
+              <br><br>
+              Made for CMPM 80k at UCSC taught by Tad Leckman and Noah Wardrip-Fruin
             </p>
 
           </div>
@@ -102,19 +108,23 @@
 
         </div>
 
-        <h2 class='portfolio-heading'>The World Moves On</h2>
+        <h2 class='portfolio-heading'>The World Moves On (Fall 2021)</h2>
         <div class="portfolio-item">
 
           <div class='portfolio-desc'>
             <p class='portfolio-text'>
-              What do you do after something unbearable happens to someone you love?
-              How can you help if they're stuck in the past?
+              <i>What do you do after something unbearable happens to someone you love?<br>
+              How can you help if they're stuck in the past?</i>
               <br><br>
-              In this interactive narrative, I wanted to look at loss and depression from an outside perspective.
-              I worked in monotone to set the tone and used text placement and font to differentiate
+              In this interactive narrative, she wanted to look at loss and depression from an outside perspective.
+              She worked in grayscale to set the tone and used text placement and font to differentiate
               between each voice.
               <br><br>
-              This project was made using an engine created by Adam Smith for CMPM 35 at UCSC in Fall 2021.
+              Other Credits:
+              <br>
+              Engine: Adam Smith
+              <br><br>
+              Made for CMPM 35 at UCSC taught by Adam Smith
               <br><br>
               <a href="https://the-world-moves-on.glitch.me/" target="_blank">Visit the Website</a>
             </p>
@@ -123,17 +133,20 @@
 
         </div>
 
-        <h2 class='portfolio-heading'>The Unfortunate Tail of Fancy the Cat</h2>
+        <h2 class='portfolio-heading'>The Unfortunate Tail of Fancy the Cat (Fall 2021)</h2>
         <div class="portfolio-item">
           <div class='portfolio-desc'>
             <p class='portfolio-text'>
-              A story about a cat that always ends horribly.
+              <i>A story about a cat that always ends horribly.</i>
               <br><br>
-              In this branching narrative, I played with a contrast between a silly visual aesthetic and a
-              sad and dark topic. I wanted to explore surface level success and an unhealthy obsession with
-              work, both of which are topics that I'm very familiar with.
+              This branching narrative aims to explore surface level success and an unhealthy obsession with work.
+              In it, she played with a contrast between a silly visual aesthetic and a dark topic to make her point.
               <br><br>
-              This project was made using an engine created by Adam Smith for CMPM 35 at UCSC in Fall 2021.
+              Other Credits:
+              <br>
+              Engine: Adam Smith
+              <br><br>
+              Made for CMPM 35 at UCSC taught by Adam Smith
               <br><br>
               <a href="https://the-unfortunate-tail-of-fancy-the-cat.glitch.me/" target="_blank">Visit the Website</a>
             </p>
