Changes to pictures/video

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/wide-screen.css">
     <link rel="stylesheet" href="css/small-screen.css">
 
-
-
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -74,7 +72,9 @@
           </div>
 
 
-          <img class='portfolio-img' src="img/main/extinction-party.png" alt="A screenshot of a website. It reads 'Ready to join the party?' in a hot pink, striped font. Underneath is a hot pink button that reads 'yes' in all caps.">
+          <img class='portfolio-img' src="img/projects/extinction-party.png"
+          alt="A screenshot of a website. It reads 'Ready to join the party?' in a hot pink, striped font.
+          Underneath is a hot pink button that reads 'yes' in all caps.">
 
         </div>
 
