--- a/index.html
+++ b/index.html
@@ -128,8 +128,12 @@
               <br><br>
               <a href="https://the-world-moves-on.glitch.me/" target="_blank">Visit the Website</a>
             </p>
-
           </div>
+
+          <img class='portfolio-img' src="img/projects/world-moves.png"
+          alt="A screenshot of a website. It's titled 'The World Moves On'. It has a white to black gradient 
+          from top to bottom. Below the title, there are various text boxes in white, gray, or black to that show a 
+          conversation and the tone of each voice's speech.">
 
         </div>
 
@@ -151,6 +155,9 @@
               <a href="https://the-unfortunate-tail-of-fancy-the-cat.glitch.me/" target="_blank">Visit the Website</a>
             </p>
           </div>
+
+          <img class='portfolio-img' src="img/projects/unfortunate-tail.png"
+          alt="A simple, flat-colored, digital drawing of a gray cat in a top hat. It looks distantly sad.">
         </div>
 
       </div>
