--- a/index.html
+++ b/index.html
@@ -60,15 +60,20 @@
             
 
             <p class="margin-0">
-              Alia Toth-Smith is a writer, designer, and programmer
-              currently pursuing a B.A. in <i>Art and Design:Games
-              and Playable Media</i> at University of California, Santa Cruz.
-              She uses her creative, technical, and analytical tools to produce creative projects in a variety of genres.
-              She's currently exploring sound design, table top role-playing games, and short, story-based games.
+              Alia Toth-Smith is mixed-media role-playing game maker, fiction writer, and 
+              reluctant programmer from the San Francisco Bay Area. They're currently 
+              most interested in exploring table top role-playing games and short, 
+              story-focused games. They are currently pursuing their B.A. in Art and Design: 
+              Games and Playable Media and are expected to graduate in 2024.
               <br><br>
-              In her free time, she likes to play with her dog, write fiction, and spend time with her family.
+              In their quest to know 
+              a little about everything, they also dabble in video editing, sound designing, 
+              graphic designing, acting, singing, macraméing, jewelry making and painting. 
+              Their other hobbies include playing with their dog, writing aimless conversations, 
+              spying, and spending time with their family.
               <br><br>
-              In Spring 2021, she worked as an assistant director on the French play for the Miriam Ellis International Playhouse.
+              In Spring 2021, they worked as an assistant director on the French play for the 
+              Miriam Ellis International Playhouse.
 
             </p>
           </div>
