Updates to Tail and Formatting on Project Pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
 
     <div class='main'>
-      <div id="work">
+      <div class='padding-2'>
         <h1 class='portfolio-heading center-text'>About Me</h1>
 
         <div class="flex-display center">
