--- a/pages/projects/stuff-in-a-room.html
+++ b/pages/projects/stuff-in-a-room.html
@@ -44,7 +44,7 @@
 
     <!-- MAIN BODY -->
     <div class='main'>
-      <div id='work'>
+      <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>Stuff in a Room (Spectacular Experiences)</h1>
         <p class='margin-0 center-text'>Feb. 14th - Mar. 17th, 2023</p>
 
