--- a/pages/resume.html
+++ b/pages/resume.html
@@ -42,7 +42,7 @@
 
     <!-- List of Projects, link to their own page, brief description here and one picture -->
     <div class='main'>
-      <div id='work' class="min-width-100">
+      <div class='padding-2' class="min-width-100">
         <h1 class='portfolio-heading center-text'>Resume</h1>
 
           <div class="padding-2 max-width-100">
