--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,7 +42,7 @@
 
     <!-- List of Projects, link to their own page, brief description here and one picture -->
     <div class='main'>
-      <div id='work'>
+      <div class='padding-2'>
         <h1 class='portfolio-heading center-text'>Projects</h1>
 
           <div class="padding-2 max-width-100">
