--- a/pages/projects/extinction-party.html
+++ b/pages/projects/extinction-party.html
@@ -44,7 +44,7 @@
 
     <!-- MAIN BODY -->
     <div class='main'>
-      <div id='work'>
+      <div class='padding-2'>
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>Extinction Party</h1>
         <p class='margin-0 center-text'>Spring 2022</p>
 
