--- a/pages/projects/extinction-party.html
+++ b/pages/projects/extinction-party.html
@@ -48,24 +48,65 @@
         <h1 class='padding-2 padding-bottom-0 margin-0 center-text'>Extinction Party</h1>
         <p class='margin-0 center-text'>Spring 2022</p>
 
-        <div class="padding-2 width-100">
+        <div class="width-100">
           
           <div class="portfolio-item center">
-            <div class="portfolio-desc width-50">
+            <div class="portfolio-desc width-70">
               <div class="portfolio-text">
                 <p>
-                        Created in conjunction with four other team members, she was responsible
-                        for all interactions on this website. She also contributed heavily to the CSS and
-                        overall theme of the website. During group meetings, she led discussion, delegated
-                        work, and helped her teammates complete their portions.
-                        <br><br>
-                        Made for ART 101 at UCSC taught by Wes Modes.
-                        <br><br>
-                        <a href="https://atothsmi.github.io/art-101-g14/" target="_blank">Visit the Website</a>
+                  This project was designed to raise awareness on human's role in extinction. 
+                  It features 10 animals that are already extinct due to human actions and ends 
+                  with a call to action that references other endangered animals.
+                  <br><br>
+                  This website was created with a team, credited below. I functioned as the primary programmer 
+                  and project manager. I was responsible for all of the interactions on the website. I also 
+                  contributed to the theme of the website and the CSS design. We met several times over the course 
+                  of three months (one quarter of university). During those meetings, I lead discussion on the 
+                  project, delegated work, and helped teammates troubleshoot their tasks when needed.
+                  <br><br>
+                  While this website is certainly imperfect, it was an excellent exercise in website design and 
+                  programming with javascript. It also provided several insights into how to work as a group and how 
+                  to delegate tasks while balancing everyone's strengths and weaknesses.
+                  <br><br>
+                  Credits:
+                  <br>
+                  Alia Toth-Smith - Programmer
+                  <br>
+                  LJ Mcdermott - Website Design / Artist 
+                  <br>
+                  Myles Rider-Alexis - Sound Engineer
+                  <br>
+                  Paige Anderson - Research / Assets
+                  <br>
+                  Nathan Casey - Artist
+                  <br><br>
+                  Made for ART 101 at UCSC taught by Wes Modes.
+                  <br><br>
+                  <a href="https://atothsmi.github.io/art-101-g14/" target="_blank">Visit the Website</a>
                 </p>
               </div>
             </div>
-            <img class="portfolio-img"  src="../../img/projects/extinction-party.png" alt="">
+            <div>
+              <br>
+              <table class="padding-2 width-30">
+                <tr>
+                  <td>
+                    <img  src="../../img/projects/extinction-party.png" alt="">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <br>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img src="../../img/projects/extinction-party-mammoth.png" alt="">
+                  </td>
+                </tr>
+              </table>
+            </div>
+            
           </div>
 
         </div>
