Continued formatting changes to pages

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <a class="text-decoration-none" href="pages/projects.html">projects</a>
           </p>
   
-          <p class='contact-text'>
+          <!-- <p class='contact-text'>
             <a class="text-decoration-none" href="pages/resume.html">resume</a>
-          </p>
+          </p> -->
 
           <p class='contact-text'>
             <a class="text-decoration-none" href="pages/contact.html">contact</a>
@@ -52,7 +52,7 @@
 
     <div class='main'>
       <div class='padding-2'>
-        <h1 class='portfolio-heading center-text'>About Me</h1>
+        <h1 class='center-text'>About Me</h1>
 
         <div class="flex-display center">
           <div class='portfolio-item width-70'>
@@ -74,6 +74,10 @@
               <br><br>
               In Spring 2021, they worked as an assistant director on the French play for the 
               Miriam Ellis International Playhouse.
+              <br><br>
+              <a href="pages/projects.html">go to projects</a>
+              <br>
+              <a href="https://aliatothsmith.itch.io/">go to itch page</a>
 
             </p>
           </div>
