--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,9 +23,9 @@
             <a class="text-decoration-none" href="projects.html">projects</a>
           </p>
   
-          <p class='contact-text'>
+          <!-- <p class='contact-text'>
             <a class="text-decoration-none" href="resume.html">resume</a>
-          </p>
+          </p> -->
 
           <p class='contact-text'>
             <a class="text-decoration-none" href="contact.html">contact</a>
@@ -43,7 +43,7 @@
     <!-- List of Projects, link to their own page, brief description here and one picture -->
     <div class='main'>
       <div class='padding-2'>
-        <h1 class='portfolio-heading center-text'>Projects</h1>
+        <h1 class='center-text'>Projects</h1>
 
           <div class="padding-2 max-width-100">
           
@@ -117,7 +117,7 @@
                 </p>
               </div>
             </div>
-            <img class="portfolio-img width-50"  src="../img/projects/unfortunate-tail.png" alt="">
+            <img class="portfolio-img"  src="../img/unfortunate-tail/unfortunate-tail-thumbnail.png" alt="">
           </div>
 
         </div>
