--- a/pages/projects/extinction-party.html
+++ b/pages/projects/extinction-party.html
@@ -24,9 +24,9 @@
               <a class="text-decoration-none" href="../projects.html">projects</a>
             </p>
     
-            <p class='contact-text'>
+            <!-- <p class='contact-text'>
               <a class="text-decoration-none" href="../resume.html">resume</a>
-            </p>
+            </p> -->
   
             <p class='contact-text'>
               <a class="text-decoration-none" href="../contact.html">contact</a>
@@ -88,7 +88,7 @@
             </div>
             <div>
               <br>
-              <table class="padding-2 width-30">
+              <table class="padding-2">
                 <tr>
                   <td>
                     <img  src="../../img/projects/extinction-party.png" alt="">
