Updated Contact and Project Roles, Project Page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -23,9 +23,9 @@
             <a class="text-decoration-none" href="projects.html">projects</a>
           </p>
   
-          <!-- <p class='contact-text'>
+          <p class='contact-text'>
             <a class="text-decoration-none" href="resume.html">resume</a>
-          </p> -->
+          </p>
 
           <p class='contact-text'>
             <a class="text-decoration-none" href="contact.html">contact</a>
@@ -53,7 +53,7 @@
                 
                 <div class="portfolio-text">
                   <h2><a class="text-decoration-none" href="projects/stuff-in-a-room.html">Stuff in a Room (Spectacular Experiences)</a></h2>
-                  <p>Feb. 14th - Mar. 17th, 2023</p>
+                  <p>Feb. 14th - Mar. 17th, 2023, Game Designer and Set Designer</p>
                   <p>
                     <i>3 weeks, 30 students, 5 spectacular experiences</i>
                   </p>
@@ -72,7 +72,7 @@
               
               <div class="portfolio-text">
                 <h2><a class="text-decoration-none" href="projects/extinction-party.html">Extinction Party</a></h2>
-                <p>Spring 2022</p>
+                <p>Spring 2022, Programmer</p>
                 <p>
                   <i>A satirical take on animal extinction awareness.<br> Browse through to learn
                     how ten distinct animals went extinct.</i>
@@ -91,7 +91,7 @@
             <div class="portfolio-desc width-50">
               <div class="portfolio-text">
                 <h2><a class="text-decoration-none" href="projects/world-moves-on.html">The World Moves On</a></h2>
-                <p>Fall 2021</p>
+                <p>Fall 2021, Narrative Designer and Visual Designer</p>
                 <p>
                   <i>What do you do after something unbearable happens to someone you love?<br>
                     How can you help if they're stuck in the past?</i>
@@ -111,7 +111,7 @@
             <div class="portfolio-desc width-50">
               <div class="portfolio-text">
                 <h2><a class="text-decoration-none" href="projects/unfortunate-tail.html">The Unfortunate Tail of Fancy the Cat</a></h2>
-                <p>Fall 2021</p>
+                <p>Fall 2021, Narrative Designer and Visual Designer</p>
                 <p>
                   <i>A story about a cat that always* ends horribly.</i>
                 </p>
