--- a/index.html
+++ b/index.html
@@ -32,20 +32,33 @@
             <a class="text-decoration-none" href="pages/projects.html">projects</a>
           </p>
   
-          <!-- <p class='contact-text'>
+          <p class='contact-text'>
             <a class="text-decoration-none" href="pages/resume.html">resume</a>
-          </p> -->
+          </p>
 
           <p class='contact-text'>
             <a class="text-decoration-none" href="pages/contact.html">contact</a>
           </p> 
 
         </div>
+
+        <div class="subheader center">
+          <p class="contact-text">
+            <a class="text-decoration-none" href="index.html">Alia Toth-Smith</a>
+          </p>
+        </div>
         
         <div class="subheader right">
-          <p class="name-text contact-text">
-            <a class="text-decoration-none" href="index.html">Alia Toth-Smith</a></p>
+          <p class="contact-text">
+            <a class="text-decoration-none" href="index.html">about</a>
+          </p>
+          <p class="contact-text">
+            <a class="text-decoration-none" href="index.html">thoughts</a>
+          </p>
         </div>
+
+
+
       </div>
     </div>
   
@@ -61,19 +74,13 @@
 
             <p class="margin-0">
               Alia Toth-Smith is mixed-media role-playing game maker, fiction writer, and 
-              reluctant programmer from the San Francisco Bay Area. They're currently 
-              most interested in exploring table top role-playing games and short, 
-              story-focused games. They are currently pursuing their B.A. in Art and Design: 
-              Games and Playable Media and are expected to graduate in 2024.
-              <br><br>
-              In their quest to know 
+              reluctant programmer from the San Francisco Bay Area. In their quest to know 
               a little about everything, they also dabble in video editing, sound designing, 
               graphic designing, acting, singing, macraméing, jewelry making and painting. 
-              Their other hobbies include playing with their dog, writing aimless conversations, 
-              spying, and spending time with their family.
-              <br><br>
-              In Spring 2021, they worked as an assistant director on the French play for the 
-              Miriam Ellis International Playhouse.
+              Right now, they're most interested in exploring table top role-playing games and short, 
+              story-focused games with a focus on themes of mourning, death, and mental health. 
+              As of Winter 2024, they are pursuing their B.A. in Art and Design: 
+              Games and Playable Media and are expected to graduate in 2024.
               <br><br>
               <a href="pages/projects.html">go to projects</a>
               <br>
