--- a/pages/projects/unfortunate-tail.html
+++ b/pages/projects/unfortunate-tail.html
@@ -24,9 +24,9 @@
             <a class="text-decoration-none" href="../projects.html">projects</a>
           </p>
   
-          <!-- <p class='contact-text'>
+          <p class='contact-text'>
             <a class="text-decoration-none" href="../resume.html">resume</a>
-          </p> -->
+          </p>
 
           <p class='contact-text'>
             <a class="text-decoration-none" href="../contact.html">contact</a>
