Updated Nav Links and Added Projects

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="text-decoration-none" href="index.html">about</a>
           </p>
           <p class="contact-text">
-            <a class="text-decoration-none" href="index.html">thoughts</a>
+            <a class="text-decoration-none" href="pages/thoughts.html">thoughts</a>
           </p>
         </div>
 
