--- a/pages/resume.html
+++ b/pages/resume.html
@@ -33,9 +33,19 @@
 
         </div>
         
+        <div class="subheader center">
+          <p class="contact-text">
+            <a class="text-decoration-none" href="../index.html">Alia Toth-Smith</a>
+          </p>
+        </div>
+        
         <div class="subheader right">
-          <p class="name-text contact-text">
-            <a class="text-decoration-none" href="../index.html">Alia Toth-Smith</a></p>
+          <p class="contact-text">
+            <a class="text-decoration-none" href="../index.html">about</a>
+          </p>
+          <p class="contact-text">
+            <a class="text-decoration-none" href="thoughts.html">thoughts</a>
+          </p>
         </div>
       </div>
     </div>
