--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="../css/wide-screen.css">
     <link rel="stylesheet" href="../css/style.css">
 
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+
+    <!-- Javascript -->
+    <script type="text/json" src="../js/thoughts.json" defer></script>
+    <script type="text/javascript" src="../js/thoughts.js" defer></script>
   </head>
   <body>
 
